first part of the P1 section completed
